Added additional comments for helpful documentation

--- a/static/index.html
+++ b/static/index.html
@@ -49,6 +49,11 @@
             from the font dropdown menu. The size is the height of the font in 
             pixels. Enter a number to change the size. The X and Y fields are the
             corresponding X and Y coordinates for the canvas.</p>
+        <p>The Update button updates the canvas with all changes to the various
+        fonts. The Remove button removes that font from the page and the canvas.</p>
+        <p>Click the Send as Email button to open the email send dialog box.
+        You will be prompted for an email address. Once the email is sent 
+        successfully, you will get a success prompt.</p>
     </div>
 
     <div class="container-fluid">
@@ -61,8 +66,6 @@
             <div class="col-md-3">
                 <input type="file" id="file_broswer" name="file_broswer" class="btn btn-default">
                 <br>
-                <button type="button" class="btn btn-default">Upload by Webcam</button>
-                <br><br>
                 <button type="button" id="send_email" class="btn btn-default">Send as Email</button>
                 <br><br>
                 <button type="button" id="add_font" class="btn btn-default">Add Text</button>
